Updated all the header files, plugins system working, test plugin renamed to example plugin, lots of small changes everywhere, SQL updated, license and to-do files added to base directory. Committing before adding install/uninstall/disable/enable system to plugins.

--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 >	Update Connector to throw exceptions properly; EmailQueue needs to catch failed query executions to avoid sending the same e-mails (could potentially spam a destination).
 -----> If an exception occurs with the DB, shutdown the entire email queue service to be safe.
+>	test e-mail queue service.
+> plugin.refresh -> either conn or resultrow
+> scan and update core.settings and core.settingsdisk
+> change plugins.cs findhandlers to be view
