--- a/TODO
+++ b/TODO
@@ -27,7 +27,7 @@ theory, be far more efficient and faster.
 --> html5 drag+drop etc
 > add ability for account user log to be used for articles system
 --> add universal hooks to BSA for account event loading by types etc - specify array of uuids?
-
+> add ability to convert articles to pdf's using wkhtmltopdf as a separate plugin.
 
 Official Plugins
 ----------------------------------------------------------------------------------------------------------------------->
