BA progress save (base is down, models are being done); upgraded to connector v1.6.4.0, overhaul of URL rewriting (may move uninstall to UrlRewriting class), UUID now parses only (removal of createFromHex methods), UUID now has stronger validation.

--- a/TODO
+++ b/TODO
@@ -41,3 +41,4 @@ Basic Site Authentication
 > add protection against removing unverified/verified/banned groups!
 > add ability to change username - possibly a separate mod
 
+> auto-delete log data older than three months
