More improvements whilst travelling; added E-mail model to Core.Base, yet to be implemented (needs testing, incomplete - despite change-log).

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 > test e-mail queue service.
 -- needs attack testing
+> test e-mail class
 > plugin.refresh -> either conn or resultrow - do we really need this?
 > change plugins.cs findhandlers to be view ?????!!!!!
 > add confirmation of uninstall to package developer.
